[package]
name = "json_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"

bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc

tokio = "1"

reqwest = "0.11.9"

serde_json = "1.0.79"

chrono = "0.4" # Used for setting DateTimes

futures = "0.3"

serde = "1" # Used in the Map Data into Structs section
